<resources>
    <string name="app_name">TrashCoin App</string>
    <string name="todo">Image context</string>
    <string name="img_logo_name" />
    <string name="img_innovation" />
    <string name="img_team_name" />
    <string name="img_quote" />
    <string name="tv_intro_decide">Would You Like to Start With Our Introduction ?</string>
    <string name="txt_yes">Yes</string>
    <string name="btn_intro_decide_skip">Skip Introduction</string>
    <string name="txt_no">No</string>
    <string name="tv_intro_pg_one">Dispose your waste efficiently...</string>
    <string name="tv_intro_pg_two">Collect waste efficiently...</string>
    <string name="tv_intro_pg_three">Recycle waste efficiently...</string>
    <string name="tv_intro_pg_four">Buy and Sell Recycled Products</string>
    <string name="tv_intro_pg_five">Connect with recyclers <br></br>(Collectors Only)...</string>
    <string name="next">Next</string>
    <string name="tv_get_started">Get Started...</string>
    <string name="btn_get_started_register">Register</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="tv_register">Register</string>
    <string name="et_reg_full_name">Full Name</string>
    <string name="et_reg_address">Address</string>
    <string name="et_reg_email">Email</string>
    <string name="et_reg_telephone">Telephone Number</string>
    <string name="et_reg_password">Password</string>
    <string name="hint_password">Password</string>
    <string name="spinner_user_category">Registering As...</string>
    <string name="tv_select_login">Select Your Login</string>
    <string name="tv_login_as">Login As...</string>
    <string name="tv_login_select_disposer">Waste Disposer</string>
    <string name="tv_login_select_collector">Waste Collector</string>
    <string name="tv_login_select_recycler">Waste Recycler</string>
    <string name="tv_login">Login</string>
    <string name="et_login_email">Email</string>
    <string name="tv_waste_collector_dashboard">Waste Collector Dashboard</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_add_details">Add details</string>
    <string name="tv_waste_disposers">Waste Disposers</string>
    <string name="tv_waste_recyclers">Waste Recyclers</string>
    <string name="tv_view_inventory">View Inventory</string>
    <string name="tv_chat">Collector Chat</string>
    <string name="tv_add_inventory">Add Inventory</string>
    <string name="tv_edit_inventory">Edit Inventory</string>
    <string name="et_item_name">Item Name</string>
    <string name="et_description">Description</string>
    <string name="btn_add_item">Add Item</string>
    <string name="btn_edit_item">Edit</string>
    <string name="btm_nav_dashboard">Dashboard</string>
    <string name="btm_nav_disposers">Disposers</string>
    <string name="btm_nav_recyclers">Recyclers</string>
    <string name="btm_nav_inventory">Inventory</string>
    <string name="btm_nav_chat">Chat</string>
    <string name="yourinfo">yourInfo</string>
    <string name="nextPage">NEXT</string>
    <string name="tv_users_select_user">Select User</string>
    <string name="tv_disposer_users_select_user">Select User</string>
    <string name="tv_recycler_users_select_user">Select User</string>
    <string name="et_messaging_hint">Type A Message</string>
    <string name="et_disposer_messaging_hint">Type A Message</string>
    <string name="et_recycler_messaging_hint">Type A Message</string>
    <string name="tv_waste_disposer_dashboard">Waste Disposer Dashboard</string>
    <string name="tv_view_collectors">View Collectors</string>
    <string name="tv_shop">Shop</string>
    <string name="tv_waste_in_hand">Waste In Hand</string>
    <string name="btm_nav_waste_in_hand">Waste</string>
    <string name="btm_nav_shopping_cart">Cart</string>
    <string name="btm_nav_view_collectors">Collectors</string>
    <string name="tv_shopping_products">Our Products</string>
    <string name="tv_product_discount">Discount</string>
    <string name="tv_product_title">Product Title</string>
    <string name="tv_product_price">Product Price</string>
    <string name="btn_add_to_cart">Add</string>
    <string name="img_description" />
    <string name="tv_cart_product_name">Product Name</string>
    <string name="tv_cart_tot_price">Product Price</string>
    <string name="tv_cart_product_quantity">0</string>
    <string name="tv_my_cart">My Cart</string>
    <string name="btn_checkout">Checkout</string>
    <string name="tv_product_category">Product Category</string>
    <string name="tv_product_description">Product Description</string>
    <string name="tv_product_discount_note">Discount Note</string>
    <string name="et_category">Category</string>
    <string name="et_product_description">Description</string>
    <string name="et_price">Price</string>
    <string name="et_discount">Discount</string>
    <string name="tv_category">Category : </string>
    <string name="tv_description">Description :</string>
    <string name="tv_price">Price :</string>
    <string name="tv_discount">Discount :</string>
    <string name="tv_chat_disposer">Disposer Chat</string>
    <string name="tv_chat_recycler">Recycler Chat</string>
    <string name="tv_availability">Online</string>
    <string name="wastetypes" />
    <string name="tv_res_recycler_name">Recycler Name :-</string>
    <string name="tv_recycler_phone">Recycler Phone :-</string>
    <string name="tv_res_working_company">Material :-</string>
    <string name="tv_add_products">Add Products</string>
    <string name="et_product_name">Product Name</string>
    <string name="et_product_price">Product Price</string>
    <string name="et_products_description">Product Description</string>
    <string name="btn_add_product">Add Product</string>
    <string name="et_product_Category">Product Category</string>
    <string name="et_product_Quantity">Product Quantity</string>
    <string name="et_product_Discount_Price">Product Discount Price</string>
    <string name="et_product_Discount_Note">Product Discount Note</string>
    <string name="tv_waste_recycler_dashboard">Waste Recycler Dashboard</string>
    <string name="tv_recycler_product_dashboard">Product Management</string>
    <string name="tv_recycler_chat_dashboard">Recycler Chat</string>
    <string name="tv_edit_products">Edit Products</string>
    <string name="tv_recycler_info_dashboard">Recycler Info</string>
    <string name="btn_edit_product">Submit</string>
    <string name="btm_nav_recycler_dashboard">Home</string>
    <string name="btm_nav_recycler_info">Info</string>
    <string name="btm_nav_recycler_product">Product</string>
    <string name="tv_products_recycler">System Product</string>
    <string name="btn_products_edit_recycler">Edit</string>
    <string name="btn_products_delete_recycler">Delete</string>
    <string name="tv_recycler_add_data">Recycler Add Data</string>
    <string name="et_enter_service_company">Required Material </string>
    <string name="btn_pickup_date">Pickup Date</string>
    <string name="tv_inventory">Inventory</string>
    <string name="tv_add_item">Add Item</string>
    <string name="txt">TextView</string>
    <string name="txt_inventory_id">Inventory Id :-</string>
    <string name="txt_inventory_name">Inventory Name :-</string>
    <string name="tv_item_description">Item Description :-</string>
    <string name="tv_pickup_date">Pickup Date :-</string>
    <string name="btn_inventory_item_edit">Edit</string>
    <string name="btn_inventory_item_delete">Delete</string>
    <string name="tv_checkout">Checkout</string>
    <string name="tv_checkout_total">Total Price</string>
    <string name="tv_set_price">0</string>
    <string name="tv_checkout_discount">Discount</string>
    <string name="tv_total_payable">Total Payable</string>
    <string name="btn_pay_online">Pay Online</string>
    <string name="btn_cash_delivery">Cash On Delivery</string>
    <string name="tv_cash_delivery">Cash On Delivery</string>
    <string name="btn_proceed">Proceed</string>
    <string name="et_cash_delivery_name">Name</string>
    <string name="et_cash_delivery_contact">Contact Number</string>
    <string name="et_cash_delivery_address">Address</string>
    <string name="tv_order_number">Order No</string>
    <string name="btn_pend">Pending</string>
    <string name="tv_my_orders">My Orders</string>
    <string name="tv_collector_add_data">Collector Add Data</string>
    <string name="btn_add_col_details_end_time">End Time</string>
    <string name="btn_add_col_details_start_time">Start Time</string>
    <string name="btn_col_add_data">Add Data</string>
    <string name="et_enter_working_company_name">Enter Working Company Name</string>
    <string name="et_enter_working_mobile_number">Enter Working Mobile Number</string>
    <string name="et_enter_working_area">Enter Working Area</string>
    <string name="tv_col_availability">Availability :-</string>
    <string name="tv_col_working_area">Working Area :-</string>
    <string name="tv_col_collector_name">Collector Name :-</string>
    <string name="tv_collector_phone">Collector Phone :-</string>
    <string name="tv_col_working_company">Working Company :-</string>
    <string name="tv_col_starting_time">Starting Time :-</string>
    <string name="tv_col_end_time">End Time :-</string>
    <string name="tv_collectors">Collectors</string>
    <string name="btn_col_calculator">Calculator</string>
    <string name="tv_calculator">Calculator</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="what_is_type_of_waste_do_you_have">What is type of waste do you have?</string>
    <string name="plastic_waste">Plastic Waste</string>
    <string name="paper_waste">Paper Waste</string>
    <string name="metal_waste">Metal Waste</string>
    <string name="aluminium_waste">Aluminium Waste</string>
    <string name="cardboard_waste">Cardboard Waste</string>
    <string name="welcome_on_board">Welcome On Board</string>
    <string name="btn_next">Next</string>
    <string name="timetable">Timetable</string>
    <string name="more_details">More Details</string>
    <string name="submit">Submit</string>
    <string name="collector_s_timetable">Collector\'s Timetable</string>
    <string name="date_time">Date Time</string>
    <string name="weekend">Weekend</string>
    <string name="weekdays">Weekdays</string>
    <string name="monday_8_00_am_5_00_pm">Monday - 8.00 am - 5.00 pm</string>
    <string name="tuesday_8_00_am_5_00_pm">Tuesday - 8.00 am - 5.00 pm</string>
    <string name="wednesday_8_00_5_00">Wednesday - 8.00 - 5.00</string>
    <string name="thursday_8_00_5_00">Thursday - 8.00 - 5.00</string>
    <string name="friday_8_00_5_00">Friday - 8.00 - 5.00</string>
    <string name="saturday_8_00_2_00">Saturday - 8.00 - 2.00</string>
    <string name="saturday_8_00_4_00">Saturday - 8.00 - 4.00</string>
    <string name="update_waste_details">Update Waste Details</string>
    <string name="waste_items">Waste Items</string>
    <string name="what_type_of_waste_do_you_have">What type of waste do you have?</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="waste_disposers">Waste Disposers</string>
    <string name="desc_disposer">So many waste issues have negative consequences on the quality of life;Here comes our rule to help you have an environmental impact and feel good about it..</string>
    <string name="tv_let_s_go">LET\'S GO</string>
    <string name="tv_disp_man">WELCOME TO WASTE DISPOSAL MANAGEMENT</string>
    <string name="txt_welcome">Trash coin app is here for you, If you’re interested in working you way towards a more sustainable lifestyle,Get creative with your waste items and find new uses for them.Dont’t worry we’ll do it for you..</string>
    <string name="txt_more">How to manage waste disposal in home?</string>
    <string name="tv_man_01">1.Limit the use of plastic.</string>
</resources>