<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/img_disposer_home"
        android:title="@string/btm_nav_dashboard"
        android:icon="@drawable/ic_dashboard"/>

    <item android:id="@+id/img_view_collectors"
        android:title="@string/btm_nav_view_collectors"
        android:icon="@drawable/ic_view_collectors"/>

    <item android:id="@+id/img_shopping_cart"
        android:title="@string/btm_nav_shopping_cart"
        android:icon="@drawable/ic_shopping_cart"
        />

    <item android:id="@+id/img_waste_in_hand"
        android:title="@string/btm_nav_waste_in_hand"
        android:icon="@drawable/ic_disposers"
        />

    <item android:id="@+id/img_collector_chat"
        android:title="@string/btm_nav_chat"
        android:icon="@drawable/ic_chat"
        />

</menu>