<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activities.recyclerProduct.AddProduct">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:id="@+id/img_edit_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tv_edit_products"
        android:textAlignment="center"
        android:textColor="@color/heading"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/img_edit_product_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/img_btn_back" />


    <LinearLayout
        android:id="@+id/ll_edit_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="0dp">
        <EditText
            android:id="@+id/productTitleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/et_product_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck" />
        <EditText
            android:id="@+id/productDescriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/et_product_description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
        <EditText
            android:id="@+id/productCategoryEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/et_product_Category"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
        <EditText
            android:id="@+id/productQuantityEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/et_product_Quantity"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />


        <EditText
            android:id="@+id/productPriceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/et_product_price"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck" />
        <EditText
            android:id="@+id/productDiscountPriceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/et_product_Discount_Price"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
        <EditText
            android:id="@+id/productDiscountNoteEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/et_product_Discount_Note"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />




    </LinearLayout>

    <Button
        android:id="@+id/submitProductBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/btn_edit_product"
        app:cornerRadius="50dp"
        tools:ignore="DuplicateSpeakableTextCheck" />




</LinearLayout>


</ScrollView>





