<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Register">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/tv_get_started"
        android:textColor="@color/heading"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/img_register"
        android:layout_below="@id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/img_register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:id="@+id/et_reg_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:drawableLeft="@drawable/ic_full_name"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/et_reg_full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/et_reg_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext"
            android:drawableLeft="@drawable/ic_address"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/et_reg_address"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/et_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/et_reg_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/et_reg_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/et_reg_telephone"
            android:importantForAutofill="no"
            android:inputType="text|phone"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/pw_reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <Spinner
            android:id="@+id/spinner_user_category"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:backgroundTint="#CFEDE2"
            android:prompt="@string/spinner_user_category"
            android:spinnerMode="dropdown"
            android:textColor="@color/reg_spinner_color"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/btn_register"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ProgressBar
            android:id="@+id/prg_reg_loading"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:visibility="invisible">

        </ProgressBar>

    </LinearLayout>

</RelativeLayout>